# doubleblind.science

./: .gitignore  Cargo.toml  README.md  backend.nix  flake.nix  frontend.nix  package-lock.json
doubleblind-frontend/: README.md  angular.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
doubleblind-frontend/src/: index.html  styles.scss
doubleblind-frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
doubleblind-frontend/src/app/core/components/card/: card.component.html  card.component.scss
doubleblind-frontend/src/app/core/data/: api.domain.ts  project.domain.ts  project.service.spec.ts  project.service.ts  repository.domain.ts  repository.service.ts
doubleblind-frontend/src/app/core/icons/: style.scss
doubleblind-frontend/src/app/core/icons/icon-dd-zone/: icon-dresden-zone.component.spec.ts  icon-dresden-zone.component.ts
doubleblind-frontend/src/app/core/icons/icon-eye/: icon-eye.component.scss  icon-eye.component.spec.ts  icon-eye.component.ts
doubleblind-frontend/src/app/core/icons/icon-github/: icon-github.component.ts
doubleblind-frontend/src/app/core/icons/icon-lasr/: icon-lasr.component.spec.ts  icon-lasr.component.ts
doubleblind-frontend/src/app/core/icons/icon-mail/: icon-mail.component.spec.ts  icon-mail.component.ts
doubleblind-frontend/src/app/core/icons/icon-mastodon/: icon-mastodon.component.spec.ts  icon-mastodon.component.ts
doubleblind-frontend/src/app/core/icons/icon-phone/: icon-phone.component.spec.ts  icon-phone.component.ts
doubleblind-frontend/src/app/core/icons/icon-tud/: icon-tud.component.spec.ts  icon-tud.component.ts
doubleblind-frontend/src/app/pages/landingpage/: landingpage.component.html  landingpage.component.scss  landingpage.component.ts
doubleblind-frontend/src/app/pages/projects/: projects.component.html  projects.component.scss  projects.component.ts
doubleblind-science/: Cargo.toml
doubleblind-science/src/: args.rs  auth.rs  database.rs  main.rs  state.rs  structs.rs
doubleblind-science/src/routes/: auth.rs  deploy.rs  mod.rs  project.rs  setup.rs  webhook.rs
doubleblind-science/src/service/: deploy.rs  deployment.rs  github_app.rs  mod.rs  projects.rs  token.rs  user.rs
entity/: Cargo.toml
entity/src/: error.rs  try_from.rs
entity/src/models/: github_app.rs  mod.rs  prelude.rs  project.rs  repository.rs  user.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231010_000001_create_table.rs  m20231121_000001_rename_users.rs
migrations/: 20231111210054_init.sql
nixos-module/: doubleblind.nix
pkgs/: backend.nix  frontend.nix  migration.nix
