[package]
name = "doubeblind-science"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.34", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.6", default-features = false, features = ["tokio", "http1", "json", "macros", "query"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
tracing = { version = "0.1", default-features = false, features = ["release_max_level_info"] }
uuid = { version = "1.5", default-features = false, features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive", "env"] }
time = { version = "0.3", default-features = false }
url = { version = "2.4", default-features = false }
tower-http = { version = "0.4", features = [ "cors" ] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "migrate"] }
anyhow = "1.0"
oauth2 = { version = "4.4", features = ["reqwest"]}
axum-extra = { version = "0.8", features = ["cookie"]}
