[package]
name = "doubeblind-science"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.12", default-features = false, features = ["runtime-tokio", "sqlx-postgres", "with-uuid"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots", "stream"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "migrate"] }
axum = { version = "0.6", default-features = false, features = ["tokio", "http1", "json", "macros", "query"] }
tokio = { version = "1.34", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
async-compression = { version = "0.4", default-features = false, features = ["tokio", "gzip"] }
tracing = { version = "0.1", default-features = false, features = ["release_max_level_info"] }
tower-http = { version = "0.4", default-features = false, features = ["cors", "trace"] }
uuid = { version = "1.6", default-features = false, features = ["v4", "serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
sea-query = { version = "0.30", default-features = false }
clap = { version = "4.4", features = ["derive", "env"] }
axum-extra = { version = "0.8", features = ["cookie"] }
futures-util = { version = "0.3", default-features = false }
time = { version = "0.3", default-features = false, features = ["serde"]}
oauth2 = { version = "4.4", features = ["reqwest"] }
url = { version = "2.5", default-features = false }
migration = { path = "../migration" }
entity = { path = "../entity" }
tokio-tar = "0.3"
anyhow = "1.0"
hmac = "0.12"
sha2 = "0.10"
serde_json = "1.0"
rand = "0.8"
jsonwebtoken = "9.2"
url_encoded_data = "0.6"
jwt-simple = { version = "0.12", features = ["pure-rust"], default-features = false}
chrono = { version = "0.4.31", features = [] }
hyper = "0.14.28"

[dev-dependencies]
tokio = {version = "1.34", features = ["test-util"] }
